<resources>
    <string name="app_name">康养苑</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_home">首页</string>
    <string name="home_nav_social">社交</string>
    <string name="home_nav_data">数据</string>
    <string name="home_nav_consult">咨询</string>
    <string name="home_nav_shop">商城</string>
    <string name="home_nav_mine">我的</string>
    <string name="home_nav_device">设备</string>
    <string name="common_phone_input_hint">输入手机号码</string>
    <string name="common_phone_input_error">手机号输入不正确</string>
    <string name="common_password_input_error">请输入密码</string>
    <string name="common_code_input_pic">请输入图中验证码</string>
    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>
    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>
    <string name="common_loading">加载中…</string>
    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>
    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>
    <string name="date_title">请选择日期</string>
    <string name="time_title">请选择时间</string>
    <string name="update_app">升级</string>
    <string name="update_download_fail">启动下载失败</string>
    <string name="update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="update_status_running">下载中</string>
    <string name="update_status_successful">立即安装</string>
    <string name="update_status_failed">下载失败</string>
    <string name="update_status_paused">暂停中</string>
    <string name="update_status_pending">等待下载</string>
    <string name="update_no_update">当前已是最新版本</string>
    <string name="share_title">分享到…</string>
    <string name="share_platform_wechat">微信</string>
    <string name="share_platform_moment">朋友圈</string>
    <string name="share_platform_qq">QQ</string>
    <string name="share_platform_qzone">QQ空间</string>
    <string name="share_platform_link">复制链接</string>
    <string name="share_platform_copy_hint">已复制到剪贴板</string>
    <string name="pay_title">请输入支付密码</string>
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_password">用账号密码登录</string>
    <string name="login_vcode">短信验证码登录</string>
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_login">登录</string>
    <string name="register_password_hint1">设置6–18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_password_input_error">两次密码输入不一致，请重新输入</string>
    <string name="register_success">注册成功！请登录</string>
    <string name="setting_title">设置</string>
    <string name="setting_language">语言切换</string>
    <string name="setting_language_simple">简体中文</string>
    <string name="setting_language_complex">繁体中文</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_cache">清空缓存</string>
    <string name="setting_auto">自动登录</string>
    <string name="setting_agreement">隐私协议</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_exit">退出登录</string>
    <string name="about_title">关于我们</string>
    <string name="about_author">
        <font color="#85b84f">Android</font>
        cxa
    </string>
    <string name="password_forget_title">忘记密码</string>
    <string name="password_reset_title">设置登录密码</string>
    <string name="password_reset_phone_hintr">输入原来密码</string>
    <string name="password_reset_phone_hint1">设置6–18位登录密码</string>
    <string name="password_reset_phone_hint2">重新输入一次密码</string>
    <string name="password_reset_input_error">两次密码输入不一致，请重新输入</string>
    <string name="password_reset_success">密码重置成功</string>
    <string name="phone_verify_title">手机号验证</string>
    <string name="phone_verify_current_phone">当前手机号：%s</string>
    <string name="phone_reset_title">修改手机号</string>
    <string name="phone_reset_change_hint">下次登录请使用更换后的新手机号登录</string>
    <string name="phone_reset_commit">立即绑定</string>
    <string name="phone_reset_commit_succeed">绑定成功，下次登录请使用新手机号登录</string>
    <string name="personal_data_title">个人资料</string>
    <string name="personal_data_head">头像</string>
    <string name="personal_data_id">用户ID</string>
    <string name="personal_data_name">昵称</string>
    <string name="personal_data_name_hint">设置昵称</string>
    <string name="personal_data_realname_hint">填写姓名</string>
    <string name="personal_data_address">地区</string>
    <string name="personal_data_address_hint">请选择</string>
    <string name="personal_data_phone">手机号码</string>
    <string name="personal_data_idcard">身份证号</string>
    <string name="personal_data_phone_hint">立即绑定</string>
    <string name="web_title">网页加载中…</string>
    <string name="crash_error_hint">发生意外错误\n抱歉，给您带来不便</string>
    <string name="crash_error_restart">重新启动</string>
    <string name="crash_error_log">错误日志</string>
    <string name="crash_error_details">错误详情</string>
    <string name="crash_error_info">错误信息</string>
    <string name="crash_copy_log">复制日志</string>
    <string name="crash_close">关闭</string>
    <string name="photo_title">图片选择</string>
    <string name="photo_all">所有图片</string>
    <string name="photo_total">共 %d 张</string>
    <string name="photo_max_hint">本次最多只能选择 %d 张图片</string>
    <string name="photo_launch_fail">无法启动相机</string>
    <string name="photo_picture_error">图片错误</string>
    <string name="kky_name">康养苑</string>
    <string name="kky_companyinfo">
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;公司专注于开发可穿戴电子产品以实现监控中老年的身体数据指标相关指标（包括但不限于血压、心率、计步和定位等），从而现实为客户提供实时身体数据分析，预警，医疗救助，咨询等服务，立志成为中老年人群健康医疗服务提供的专业服务供应商。
    </string>
    <string name="kky_my_family">我的家人</string>
    <string name="kky_my_device">我的设备</string>
    <string name="kky_my_location">位置</string>
    <string name="kky_my_health_service">健康服务</string>
    <string name="kky_my_health_assess">健康评估</string>
    <string name="kky_my_social_life">社交生活</string>
    <string name="kky_my_health_course">健康课程</string>
    <string name="kky_my_medical_service">医疗服务</string>
    <string name="kky_my_health_advice">健康播报</string>
    <string name="kky_my_social_hotvideo">热门视频</string>
    <string name="kky_message">消息通知</string>
    <string name="kky_alldevices">全部设备</string>
    <string name="kky_more">更多</string>
    <string name="kky_change">换一换</string>
    <string name="kky_search">搜一搜</string>
    <string name="kky_recommend_today">今日推荐</string>
    <string name="kky_title">标题</string>
    <string name="kky_details">详情信息</string>
    <string name="kky_info">详情</string>
    <string name="kky_edit">编辑</string>
    <string name="kky_setting">设置</string>
    <string name="kky_unlogin">未登录</string>
    <string name="kky_edit_personal_info">编辑个人信息</string>
    <string name="kky_my_credit">我的积分</string>
    <string name="kky_health_record">健康档案</string>
    <string name="kky_my_service">我的服务</string>
    <string name="kky_my_course">我的课程</string>
    <string name="kky_my_message">我的资讯</string>
    <string name="kky_contact_us">联系我们</string>
    <string name="kky_company_profile">公司介绍</string>
    <string name="kky_about_customer_service_phone">客服电话</string>
    <string name="kky_about_enterprise_wechat">企业微信</string>
    <string name="kky_about_enterprise_email">企业邮箱</string>
    <string name="kky_about_customer_service_online">在线客服</string>
    <string name="kky_about_copyright">© %1$s kangyangyuan All rights reserved.</string>
    <string name="kky_password_change">修改密码</string>
    <string name="kky_user_phone">手机号码</string>
    <string name="kky_bind_wechat">绑定微信</string>
    <string name="kky_unbind_wechat">解绑</string>
    <string name="kky_unbind_wechat_confirm">确定要从当前账号中解绑微信</string>
    <string name="kky_user_advice">使用反馈</string>
    <string name="kky_user_advice_content">请尽可能详细地叙述您遇到的问题，我们会尽快解决</string>
    <string name="kky_user_contactway">联系方式</string>
    <string name="kky_user_dayrecordupdate">上传日志帮助我们定位问题</string>
    <string name="kky_setting_about">关于</string>
    <string name="kky_version_info">版本信息</string>
    <string name="kky_version_check">检查更新</string>
    <string name="kky_version_checkcop">已是最新版本</string>
    <string name="kky_privacy_policy">隐私政策</string>
    <string name="kky_user_agreement">用户使用协议</string>
    <string name="kky_user_advice_attach">您的意见是我们进步的动力</string>
    <string name="kky_about">关于</string>
    <string name="kky_account_safe">账户安全</string>
    <string name="kky_log_off">注销当前账号</string>
    <string name="kky_log_out">退出登录</string>
    <string name="kky_save">保存</string>
    <string name="kky_connect_tips">网络未连接，请连接网络</string>
    <string name="kky_personal_info">个人信息</string>
    <string name="kky_headicon">头像</string>
    <string name="kky_username">昵称</string>
    <string name="kky_sex">性别</string>
    <string name="kky_sex_n">保密</string>
    <string name="kky_sex_m">男</string>
    <string name="kky_sex_w">女</string>
    <string name="kky_user_birth">出生日期</string>
    <string name="kky_user_address">地区</string>
    <string name="kky_user_height">身高</string>
    <string name="kky_user_weight">体重</string>
    <string name="kky_user_married">婚姻状况</string>
    <string name="kky_user_smoking">吸烟状况</string>
    <string name="kky_user_drinking">饮酒状况</string>
    <string name="kky_user_illness">既往病史</string>
    <string name="kky_user_realname">真实姓名</string>
    <string name="kky_user_residenceaddress">居住地址</string>
    <string name="kky_exchange_record">兑换记录</string>
    <string name="kky_exchange_credit">积分兑换</string>
    <string name="kky_rookie_mission">新手任务</string>
    <string name="kky_daily_mission">每日任务</string>
    <string name="kky_recently_used">最近使用</string>
    <string name="kky_device_watched">健康监测</string>
    <string name="kky_device_mouth">口腔健康</string>
    <string name="kky_device_sleep">追梦睡眠</string>
    <string name="kky_device_baby">爱心母婴</string>
    <string name="kky_device_sport">活力运动</string>
    <string name="kky_device_healthcare">养生保健</string>
    <string name="kky_mydevice_watch">手表</string>
    <string name="kky_mydevice_weight">体脂秤</string>
    <string name="kky_mydevice_heart">血压计</string>
    <string name="kky_mydevice_sleep">睡眠仪</string>
    <string name="kky_mydevice_device1">健康智能手环</string>
    <string name="kky_mydevice_device2">吸氧机</string>
    <string name="kky_mydevice_device3">理疗仪</string>
    <string name="kky_mydevice_device4">按摩仪</string>
    <string name="kky_mydevice_more">更多</string>
    <string name="kyy_workorder_des">描述：</string>
    <string name="kyy_workorder_submit">提交</string>
    <string name="kyy_visitorder_workorderid">工单号</string>
    <string name="kyy_visitorder_servicename">服务项</string>
    <string name="kyy_visitorder_creatman">回访人员</string>
    <string name="kyy_visitorder_creattime">创建时间</string>
    <string name="kyy_elder_family_fill_name">姓名</string>
    <string name="kyy_elder_family_fill_sex">性别</string>
    <string name="kyy_elder_family_fill_relationship">与长者关系</string>
    <string name="kyy_elder_family_fill_mobile">联系电话</string>
    <string name="kyy_elder_family_fill_address">住址</string>
</resources>