<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.view.fragment.mine.HealthRecordFragment">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/icon_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/icon_normal_size"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:src="@drawable/icon_kyy_gray_back"
                app:layout_constraintLeft_toLeftOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kky_health_record"
                android:textSize="@dimen/font_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/kky_save"
                android:textColor="@color/icon_blue"
                android:textSize="@dimen/font_small"
                app:layout_constraintRight_toRightOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.hjq.bar.TitleBar>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout style="@style/PullDownStyle">

        <androidx.core.widget.NestedScrollView style="@style/ScrollViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp">


                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_name"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_username" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_sex"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_sex" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_birth"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_birth" />


                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_height"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_height" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_weight"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_weight" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_married"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_married" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_smoking"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_smoking" />


                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_drinking"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_drinking" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_illness"
                    style="@style/InfoItem.Account"
                    app:sDividerLineType="none"
                    app:sLeftTextString="@string/kky_user_illness" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>


</LinearLayout>