<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".common.view.fragment.mine.SettingFragment">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="@dimen/icon_padding">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="@dimen/icon_normal_size"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:src="@drawable/icon_kyy_gray_back"
                app:layout_constraintLeft_toLeftOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/kky_setting"
                android:textSize="@dimen/font_normal"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.hjq.bar.TitleBar>


    <com.scwang.smartrefresh.layout.SmartRefreshLayout style="@style/PullDownStyle">

        <androidx.core.widget.NestedScrollView style="@style/ScrollViewStyle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_pwchange"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_password_change" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_userphone"
                    style="@style/InfoItem"
                    app:sLeftTextString="@string/kky_user_phone"
                    app:sRightTextString="13888888888"
                    app:sRightTextColor="@color/gray"/>

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_userwechat"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_bind_wechat"
                    app:sRightTextString="@string/kky_unbind_wechat"
                    app:sRightTextColor="@color/orange"/>


                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_useradvice"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_user_advice"
                    app:sRightTextString="@string/kky_user_advice_attach"
                    app:sRightTextSize="@dimen/font_small"
                    android:layout_marginTop="20dp"/>

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_about"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_about" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_accountsafe"
                    style="@style/InfoItem.Account"
                    app:sLeftTextString="@string/kky_account_safe" />

                <com.xuexiang.xui.widget.textview.supertextview.SuperTextView
                    android:id="@+id/menu_logout"
                    style="@style/InfoItem.Account"
                    android:layout_marginTop="20dp"
                    app:sDividerLineType="none"
                    app:sCenterTextString="@string/kky_log_out" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>



</LinearLayout>